# Selene

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devgrid.html  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml  ci.yml  integration.yml
crates/selene-core/: Cargo.toml
crates/selene-core/src/: backup.rs  capabilities.rs  connection_spec.rs  error.rs  introspect.rs  lib.rs  secret.rs  value.rs
crates/selene-core/src/driver/: mod.rs
crates/selene-core/src/driver/mongodb/: config.rs  convert.rs  error.rs  introspect.rs  mod.rs  query.rs  stream.rs  writes.rs
crates/selene-core/src/driver/mssql/: backup.rs  config.rs  convert.rs  error.rs  import.rs  introspect.rs  mod.rs  stream.rs
crates/selene-core/src/driver/mysql/: config.rs  convert.rs  error.rs  import.rs  introspect.rs  mod.rs  stream.rs
crates/selene-core/src/driver/postgres/: config.rs  convert.rs  error.rs  import.rs  introspect.rs  mod.rs  stream.rs
crates/selene-core/src/driver/shared/: convert.rs  mod.rs  pump.rs  sub_batch.rs
crates/selene-core/src/driver/sqlite/: config.rs  convert.rs  error.rs  import.rs  introspect.rs  mod.rs  stream.rs
crates/selene-core/src/export/: csv.rs  json.rs  mod.rs  xlsx.rs
crates/selene-core/src/guard/: mod.rs  mongo_guard.rs  sql_guard.rs
crates/selene-core/src/import/: csv.rs  mod.rs
crates/selene-core/src/secrets/: keychain.rs  mod.rs
crates/selene-core/tests/: mongodb_integration.rs  mssql_integration.rs  mysql_integration.rs  postgres_integration.rs  sqlite_integration.rs
design/logo/: build-macos-icon.py
scripts/: sync-version.sh
src/: App.module.css  App.tsx  devGrid.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  connection.rs  export.rs  fs.rs  health.rs  import.rs  introspect.rs  mod.rs  multi.rs  query.rs  session.rs
src/components/: BackupModal.tsx  BackupRestore.module.css  BackupRestoreModal.test.tsx  ConflictModal.module.css  ConflictModal.tsx  ConnectionDialog.module.css  ConnectionDialog.test.tsx  ConnectionDialog.tsx  ContextMenu.module.css  ContextMenu.tsx  CsvImportModal.module.css  CsvImportModal.test.tsx  CsvImportModal.tsx  DatabaseSelect.module.css  DatabaseSelect.tsx  EditorPane.module.css  EditorPane.tsx  EditorSearch.module.css  EditorSearch.test.tsx  EditorSearch.tsx  FileTree.module.css  FileTree.tsx  FilterIndicator.tsx  GuardModal.module.css  GuardModal.test.tsx  GuardModal.tsx  LogoMark.tsx  Modal.module.css  Modal.tsx  MultiTargetPane.module.css  MultiTargetPane.tsx  OperationProgress.tsx  PasswordPrompt.module.css  PasswordPrompt.tsx  RestoreModal.tsx  ResultsGrid.module.css  ResultsGrid.tsx  ResultsPanel.module.css  ResultsPanel.tsx  SchemaTree.module.css  (+18 more)
src/ipc/: channels.ts  commands.ts  types.test.ts  types.ts
src/lib/: cellFormat.test.ts  cellFormat.ts  connect.test.tsx  connect.ts  connectionMatch.test.ts  connectionMatch.ts  driverMeta.test.ts  driverMeta.ts  fileActions.ts  filterMatch.test.ts  filterMatch.ts  fsSync.test.ts  fsSync.ts  gridClipboard.test.ts  gridClipboard.ts  log.ts  motion.ts  multiTargetScript.test.ts  multiTargetScript.ts  path.ts  platform.ts  queries.ts  queryClient.ts  runQuery.test.ts  runQuery.ts  serverPath.ts  sessionLost.test.ts  sessionLost.ts  sqlCompletion.test.ts  sqlCompletion.ts  sqlDialect.test.ts  sqlDialect.ts  tabSession.ts  useTypeToFilter.module.css  useTypeToFilter.test.ts  useTypeToFilter.ts
src/state/: editorStore.test.ts  editorStore.ts  importStore.ts  layoutStore.ts  multiTargetStore.test.ts  multiTargetStore.ts  passwordPromptStore.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  themeStore.ts  toastStore.ts  workspaceStore.test.ts  workspaceStore.ts
src/styles/: global.css  tokens.css
src/test/: setup.ts
